# placement-1

./: setup.cfg  sync.py  tox.ini
placement/: i18n.py
placement/api/: auth.py  context.py  deploy.py  direct.py  fault_wrap.py  handler.py  policy.py  requestlog.py  resource_class_cache.py  util.py  wsgi.py  wsgi_wrapper.py
placement/api/handlers/: aggregate.py  allocation.py  allocation_candidate.py  inventory.py  resource_class.py  resource_provider.py  root.py  trait.py  usage.py
placement/api/objects/: consumer.py  project.py  resource_provider.py  user.py
placement/api/policies/: __init__.py  aggregate.py  allocation.py  allocation_candidate.py  inventory.py  resource_class.py  resource_provider.py  trait.py  usage.py
placement/api/schemas/: inventory.py
placement/conf/: __init__.py  database.py  placement.py
placement/db/sqlalchemy/: api.py  migration.py
placement/db/sqlalchemy/api_migrations/migrate_repo/versions/: 014_keypairs.py  030_require_cell_setup.py
placement/tests/: fixtures.py  policy_fixture.py
placement/tests/functional/: base.py  test_direct.py  test_placement_api.py
placement/tests/functional/db/: test_allocation_candidates.py  test_base.py  test_consumer.py  test_project.py  test_reshape.py  test_resource_class_cache.py  test_resource_provider.py  test_user.py
placement/tests/functional/fixtures/: gabbits.py  placement.py
placement/tests/unit/: test_context.py  test_deploy.py  test_fault_wrap.py  test_handler.py  test_microversion.py  test_policy.py  test_requestlog.py  test_util.py
placement/tests/unit/handlers/: test_aggregate.py
placement/tests/unit/objects/: test_resource_provider.py
